--- a/project/sandbox/style-11--flex-09--justify-content--space-around.css
+++ b/project/sandbox/style-11--flex-09--justify-content--space-around.css
@@ -3,7 +3,7 @@
     /* flex-direction: row; */ /* default */
     /* flex-direction: column; */
     /* flex-direction: column-reverse; */
-    justify-content: space-between;  /* Distributes the boxes evenly in their container */
+    justify-content: space-around;  /* Adds equal padding to left and right */
     width: 600px;
     height: 400px;
     border: 2px solid red;
