--- a/project/sandbox/style-12--flex-10--justify-content--center.css
+++ b/project/sandbox/style-12--flex-10--justify-content--center.css
@@ -3,7 +3,8 @@
     /* flex-direction: row; */ /* default */
     /* flex-direction: column; */
     /* flex-direction: column-reverse; */
-    justify-content: space-between;  /* Distributes the boxes evenly in their container */
+    gap: 20px;  /* Adds a gap of 20 pixels between the boxes */
+    justify-content: center;  /* Centers the content in the vertical and the horizontal */
     width: 600px;
     height: 400px;
     border: 2px solid red;
